Area Interchange Control as OuterLoop (#1055)
Signed-off-by: mguibert <marine.guibert@artelys.com>
Co-authored-by: vmouradian <valentin.mouradian@artelys.com>